--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ mdadm (4.4-3) sid; urgency=medium
   * Adding updated German debconf translations from Helge Kreutzmann
     <debian@helgefjell.de> (Closes: #1094018).
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Mon, 27 Jan 2025 17:19:15 +0100
+ -- Daniel Baumann <daniel@debian.org>  Mon, 27 Jan 2025 17:19:15 +0100
 
 mdadm (4.4-2) sid; urgency=medium
 
@@ -14,7 +14,7 @@ mdadm (4.4-2) sid; urgency=medium
     either (Closes: #1055994).
   * Refreshing debconf files.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Thu, 23 Jan 2025 07:29:48 +0100
+ -- Daniel Baumann <daniel@debian.org>  Thu, 23 Jan 2025 07:29:48 +0100
 
 mdadm (4.4-1) sid; urgency=high
 
@@ -23,7 +23,7 @@ mdadm (4.4-1) sid; urgency=high
   * Cherry-picking patch from upstream to update manpage about bitmaps
     being not default anymore (Closes: #1092137).
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Tue, 14 Jan 2025 11:32:30 +0100
+ -- Daniel Baumann <daniel@debian.org>  Tue, 14 Jan 2025 11:32:30 +0100
 
 mdadm (4.3+20241202-1.1) sid; urgency=high
 
@@ -38,7 +38,7 @@ mdadm (4.3+20241202-1) sid; urgency=medium
   * Uploading to sid.
   * Merging upstream version 4.3+20241202.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Thu, 12 Dec 2024 18:22:26 +0100
+ -- Daniel Baumann <daniel@debian.org>  Thu, 12 Dec 2024 18:22:26 +0100
 
 mdadm (4.3+20241108-1) sid; urgency=medium
 
@@ -50,7 +50,7 @@ mdadm (4.3+20241108-1) sid; urgency=medium
   * Refreshing exit-gracefully-when-md-device-not-found.patch.
   * Adding missing header to fix FTBFS.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Sat, 09 Nov 2024 12:41:57 +0100
+ -- Daniel Baumann <daniel@debian.org>  Sat, 09 Nov 2024 12:41:57 +0100
 
 mdadm (4.3+20240723-2) sid; urgency=medium
 
@@ -61,14 +61,14 @@ mdadm (4.3+20240723-2) sid; urgency=medium
     <zeha@debian.org> to install into usrmerged layout (Closes: #1073726).
   * Wrap-and-sorting debian files.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Mon, 29 Jul 2024 18:15:04 +0200
+ -- Daniel Baumann <daniel@debian.org>  Mon, 29 Jul 2024 18:15:04 +0200
 
 mdadm (4.3+20240723-1) sid; urgency=medium
 
   * Uploading to sid.
   * Merging upstream version 4.3+20240723.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Thu, 25 Jul 2024 08:17:15 +0200
+ -- Daniel Baumann <daniel@debian.org>  Thu, 25 Jul 2024 08:17:15 +0200
 
 mdadm (4.3+20240412-1) sid; urgency=medium
 
@@ -79,7 +79,7 @@ mdadm (4.3+20240412-1) sid; urgency=medium
   * Updating mdadm examples.
   * Correcting filename of TODO.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Sat, 27 Apr 2024 05:20:02 +0200
+ -- Daniel Baumann <daniel@debian.org>  Sat, 27 Apr 2024 05:20:02 +0200
 
 mdadm (4.3-1) sid; urgency=medium
 
@@ -87,7 +87,7 @@ mdadm (4.3-1) sid; urgency=medium
   * Merging upstream version 4.3.
   * Updating copyright for 2024.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Wed, 21 Feb 2024 18:13:58 +0100
+ -- Daniel Baumann <daniel@debian.org>  Wed, 21 Feb 2024 18:13:58 +0100
 
 mdadm (4.2+20240118-1) sid; urgency=medium
 
@@ -95,7 +95,7 @@ mdadm (4.2+20240118-1) sid; urgency=medium
   * Merging upstream version 4.2+20240118.
   * Updating years in copyright for 2024.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Wed, 31 Jan 2024 06:50:56 +0100
+ -- Daniel Baumann <daniel@debian.org>  Wed, 31 Jan 2024 06:50:56 +0100
 
 mdadm (4.2+20231121-1) sid; urgency=medium
 
@@ -107,7 +107,7 @@ mdadm (4.2+20231121-1) sid; urgency=medium
   * Adding updated Swedish debconf translations from Martin Bagge
     <brother@persilja.net> (Closes: #1057772).
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Sun, 10 Dec 2023 11:57:19 +0100
+ -- Daniel Baumann <daniel@debian.org>  Sun, 10 Dec 2023 11:57:19 +0100
 
 mdadm (4.2+20231026-1) sid; urgency=medium
 
@@ -116,14 +116,14 @@ mdadm (4.2+20231026-1) sid; urgency=medium
   * Refreshing fix-manpages.patch.
   * Refreshing no-Werror.patch.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Wed, 01 Nov 2023 05:09:47 +0100
+ -- Daniel Baumann <daniel@debian.org>  Wed, 01 Nov 2023 05:09:47 +0100
 
 mdadm (4.2+20230901-1) sid; urgency=medium
 
   * Uploading to sid.
   * Merging upstream version 4.2+20230901.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Tue, 10 Oct 2023 10:48:43 +0200
+ -- Daniel Baumann <daniel@debian.org>  Tue, 10 Oct 2023 10:48:43 +0200
 
 mdadm (4.2+20230508-7) sid; urgency=medium
 
@@ -131,7 +131,7 @@ mdadm (4.2+20230508-7) sid; urgency=medium
   * Removing generated files to fix FTBFS when build twice in a row
     (Closes: #1047538).
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Mon, 14 Aug 2023 11:51:05 +0200
+ -- Daniel Baumann <daniel@debian.org>  Mon, 14 Aug 2023 11:51:05 +0200
 
 mdadm (4.2+20230508-6) sid; urgency=medium
 
@@ -139,7 +139,7 @@ mdadm (4.2+20230508-6) sid; urgency=medium
   * Adding updated Dutch debconf translations from Frans Spiesschaert
     <Frans.Spiesschaert@yucom.be> (Closes: #1041873).
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Mon, 24 Jul 2023 20:44:54 +0200
+ -- Daniel Baumann <daniel@debian.org>  Mon, 24 Jul 2023 20:44:54 +0200
 
 mdadm (4.2+20230508-5) sid; urgency=medium
 
@@ -148,14 +148,14 @@ mdadm (4.2+20230508-5) sid; urgency=medium
   * Adding updated Romanian debconf translations from Remus-Gabriel Chelu
     <remusgabriel.chelu@disroot.org> (Closes: #1039620).
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Fri, 30 Jun 2023 10:07:14 +0200
+ -- Daniel Baumann <daniel@debian.org>  Fri, 30 Jun 2023 10:07:14 +0200
 
 mdadm (4.2+20230508-4) sid; urgency=medium
 
   * Uploading to sid.
   * Updating watch file.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Sun, 25 Jun 2023 16:26:53 +0200
+ -- Daniel Baumann <daniel@debian.org>  Sun, 25 Jun 2023 16:26:53 +0200
 
 mdadm (4.2+20230508-3) experimental; urgency=medium
 
@@ -166,14 +166,14 @@ mdadm (4.2+20230508-3) experimental; urgency=medium
     #1037496).
   * Updating debconf po files.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Sat, 24 Jun 2023 07:03:53 +0200
+ -- Daniel Baumann <daniel@debian.org>  Sat, 24 Jun 2023 07:03:53 +0200
 
 mdadm (4.2+20230508-2) sid; urgency=medium
 
   * Uploading to sid.
   * Uploading without changes after bookworm release.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Sun, 11 Jun 2023 14:32:19 +0200
+ -- Daniel Baumann <daniel@debian.org>  Sun, 11 Jun 2023 14:32:19 +0200
 
 mdadm (4.2+20230508-1) experimental; urgency=medium
 
@@ -182,14 +182,14 @@ mdadm (4.2+20230508-1) experimental; urgency=medium
   * Refreshing and updating readlink-path.patch to cover basename too.
   * Refreshing randomize-timers.patch.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Fri, 12 May 2023 14:48:12 +0200
+ -- Daniel Baumann <daniel@debian.org>  Fri, 12 May 2023 14:48:12 +0200
 
 mdadm (4.2+20230313-1) experimental; urgency=medium
 
   * Uploading to experimental.
   * Merging upstream version 4.2+20230313.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Mon, 13 Mar 2023 17:55:55 +0100
+ -- Daniel Baumann <daniel@debian.org>  Mon, 13 Mar 2023 17:55:55 +0100
 
 mdadm (4.2+20230304-1) experimental; urgency=medium
 
@@ -198,7 +198,7 @@ mdadm (4.2+20230304-1) experimental; urgency=medium
   * Adding initial Romanian debconf translations from Remus-Gabriel Chelu
     <remusgabriel.chelu@disroot.org> (Closes: #1032713).
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Mon, 13 Mar 2023 14:58:14 +0100
+ -- Daniel Baumann <daniel@debian.org>  Mon, 13 Mar 2023 14:58:14 +0100
 
 mdadm (4.2+20230302-1) experimental; urgency=medium
 
@@ -208,7 +208,7 @@ mdadm (4.2+20230302-1) experimental; urgency=medium
   * Updating exit-gracefully-when-md-device-not-found.patch for new
     upstream.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Mon, 06 Mar 2023 04:25:46 +0100
+ -- Daniel Baumann <daniel@debian.org>  Mon, 06 Mar 2023 04:25:46 +0100
 
 mdadm (4.2+20230227-1) experimental; urgency=medium
 
@@ -228,7 +228,7 @@ mdadm (4.2+20230227-1) experimental; urgency=medium
     files.
   * Wrap and sorting debian directory.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Tue, 28 Feb 2023 20:48:50 +0100
+ -- Daniel Baumann <daniel@debian.org>  Tue, 28 Feb 2023 20:48:50 +0100
 
 mdadm (4.2+20230223-2) experimental; urgency=medium
 
@@ -237,7 +237,7 @@ mdadm (4.2+20230223-2) experimental; urgency=medium
   * Silencing mounting efivars in initramfs-hook by only mounting if not
     done already.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Sat, 25 Feb 2023 22:34:46 +0100
+ -- Daniel Baumann <daniel@debian.org>  Sat, 25 Feb 2023 22:34:46 +0100
 
 mdadm (4.2+20230223-1) experimental; urgency=medium
 
@@ -289,14 +289,14 @@ mdadm (4.2+20230223-1) experimental; urgency=medium
     mdadm versions and the current one doesn't contain much information
     anymore.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Sat, 25 Feb 2023 18:55:13 +0100
+ -- Daniel Baumann <daniel@debian.org>  Sat, 25 Feb 2023 18:55:13 +0100
 
 mdadm (4.2-5) sid; urgency=medium
 
   * Uploading to sid.
   * Adopting package (Closes: #1009983).
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Fri, 24 Feb 2023 15:37:15 +0100
+ -- Daniel Baumann <daniel@debian.org>  Fri, 24 Feb 2023 15:37:15 +0100
 
 mdadm (4.2-4) unstable; urgency=medium
 
@@ -532,7 +532,7 @@ mdadm (4.1-3) unstable; urgency=medium
       with dedicated monitoring systems (e.g. icinga).
     - this debconf question makes it possible to disable these checks.
 
- -- Daniel Baumann <daniel.baumann@progress-linux.org>  Fri, 09 Aug 2019 17:19:20 +0000
+ -- Daniel Baumann <daniel@debian.org>  Fri, 09 Aug 2019 17:19:20 +0000
 
 mdadm (4.1-2) unstable; urgency=medium
 
